--- a/Content/Content.html
+++ b/Content/Content.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@200;300;400&family=Roboto+Serif:opsz@8..144&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <body>
     <div class="navbar">
         <p class="p1"><i class="uil uil-user-circle"></i> BRAND™</p>       
@@ -33,10 +35,107 @@
         <img src="https://cdn.britannica.com/35/10735-050-C7D46C6C/US-Marines-flag-Mount-Suribachi-Iwo-Jima-February-1945.jpg" alt="" height="450px"
         style="border-radius: 10px;">
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat exercitationem architecto culpa obcaecati
-            quasi excepturi et blanditiis tempore deserunt nulla libero, mollitia, placeat, dolore quae sit iure facilis
-            illum dicta cumque quos delectus molestias voluptates itaque iste? Sunt vitae harum corporis mollitia amet
-            iste illum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et perspiciatis laudantium doloremque blanditiis officia repellendus recusandae optio nulla libero, itaque facere consequatur ea similique aliquid praesentium asperiores quibusdam impedit pariatur voluptas ipsum, hic numquam! Alias molestias illum error quos perspiciatis vel nulla excepturi quam natus impedit sit modi dolorum facilis quidem, maxime ea ipsa quas corporis facere molestiae totam tempora. A unde commodi quas rerum sequi, laudantium animi dolore voluptas harum nam modi, provident quidem perspiciatis, architecto error voluptate hic quisquam eaque! Nisi labore doloribus asperiores laboriosam aspernatur, aut, molestias eligendi officiis tenetur laudantium consequatur libero necessitatibus eum. Maxime, mollitia accusamus ratione laudantium ducimus aliquam? Nam est maiores eius aut tenetur laboriosam voluptatum laudantium ut, ipsum nemo exercitationem? Molestiae beatae totam eaque numquam cum. Ipsum amet nostrum illo atque ex natus non qui, accusantium explicabo minima! Ad, facere? Eum rem iusto eveniet, temporibus numquam sed facilis ipsam odio nihil! Molestiae voluptates facilis iusto repellendus voluptatum, eveniet minima. Tempora officiis nesciunt iusto animi provident? Laboriosam earum voluptatibus veritatis nesciunt in quae impedit numquam fugiat quidem adipisci quod, unde error repellendus nisi, aperiam accusamus provident odio corrupti cumque soluta? Nemo vero neque iusto dolorem harum maxime aspernatur dolorum voluptatibus quam minima.</p>
     </div>
+    <h2 class="Judul">RELATED ARTICLE</h2>
+
+    <div class="container">
+        <div class="card-1">
+            <div class="image">
+                <img src="https://www.blinklearning.com/useruploads/ctx/a/40482350/r/s/9838750/album_akg152710.jpg?idcurso=788470" alt="">
+            </div>
+            <div class="title">
+                <h2>Sejarah Teknologi</h2>
+            </div>
+            <div class="deskripsi">
+                <p>Perkembangan Teknologi</p>
+                <a href="#">READ MORE</a>
+            </div>
+        </div>
+
+        <div class="card-1">
+            <div class="image">
+                <img src="https://www.bing.com/th?id=ODL.b2629f8280c4d6f18ece28cc07660a69&w=298&h=204&c=12&rs=1&qlt=99&pcl=faf9f7&o=6&pid=13.1" alt="">
+            </div>
+            <div class="title">
+                <h2>World War I</h2>
+            </div>
+            <div class="deskripsi">
+                <p>Pengepungan Maubeuge</p>
+                <a href="#">READ MORE</a>
+            </div>
+        </div>
+
+        <div class="card-1">
+            <div class="image">
+                <img src="https://th.bing.com/th/id/OIP.wtsvk3M1PVHXpES9SL_uTAHaFK?pid=ImgDet&w=183&h=127&c=7" alt="">
+            </div>
+            <div class="title">
+                <h2>Sejarah Indonesia</h2>
+            </div>
+            <div class="deskripsi">
+                <p>Proklamasi Kemerdekaan Indonesia</p>
+                <a href="#">READ MORE</a> 
+            </div> 
+        </div>
+    </div>
+
+    <div class="container-2">
+        <div class="card-2">
+            <div class="image-2">
+                <img src="https://th.bing.com/th/id/OIP.K_0fhyylgQmhTrmUa4WETwHaFD?w=255&h=183&c=7&r=0&o=5&pid=1.7" alt="">
+            </div>
+            <div class="title-2">
+                <h2>Revolusi Amerika</h2>
+            </div>
+            <div class="deskripsi-2">
+                <p>The Boston Tea Party</p>
+                <a href="#">READ MORE</a> 
+            </div> 
+        </div>
+        <div class="card-2">
+            <div class="image-2">
+                <img src="https://th.bing.com/th/id/OIP.Qv1oC7hchXTdJBWpffbh-AHaFj?w=258&h=194&c=7&r=0&o=5&pid=1.7" alt="">
+            </div>
+            <div class="title-2">
+                <h2>Revolusi Rusia</h2>
+            </div>
+            <div class="deskripsi-2">
+                <p>Bloody Sunday</p>
+                <a href="#">READ MORE</a> 
+            </div> 
+        </div>
+        <div class="card-2">
+            <div class="image-2">
+                <img src="https://th.bing.com/th/id/OIP.cHAHWXZO7JrzGxAnwrK61wAAAA?w=208&h=142&c=7&r=0&o=5&pid=1.7" alt="">
+            </div>
+            <div class="title-2">
+                <h2>Revolusi Cina</h2>
+            </div>
+            <div class="deskripsi-2">
+                <p>Sejarah terjadinya Revolusi cina</p>
+                <a href="#">READ MORE</a> 
+            </div> 
+        </div>
+    </div>
+    <footer>
+        <footer>
+            <div class="footer-content">
+                <h3>BRAND™ </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos sit <br> laudantium autem magni. Ab.</p>
+                <ul class="socials">
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <p>BRAND™ &copy;Copyright 2022</p>
+            </div>
+        </footer>
+        
+    </footer>
+</div>
 </body>
 </html>
