redirect after login

--- a/Login/login.html
+++ b/Login/login.html
@@ -17,26 +17,28 @@
         <form action="">
             <!-- Username -->
             <div class="textfield">
-                <input type="text" required>
+                <input type="text" required id="us">
                 <span></span>
                 <label for="">Username</label>
             </div>
             <!-- password -->
             <div class="textfield">
-                <input type="password" required>
+                <input type="password" required id="pw">
                 <span></span>
                 <label for="">Password</label>
             </div>
             <!-- failsafe -->
             <div class="failsafe"><a>Forgot Your Password?</a></div>
             <!-- go -->
-            <button onclick="">Login</button>
+            <button onclick="Log()">Login</button>
             <!-- signup -->
             <div class="signup">
                 Not a member? <a>Sign Up</a>
             </div>
         </form>
     </div>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
